# ProyectoBases2

./: .env.local  .gitignore  .pre-commit-config.yaml  Instrucciones.md  README.md  index.html  package.json  pnpm-lock.yaml  requirements.txt
Scripts/MongoDB/: crearColecciones.js
Scripts/Neo4j/: crearNodos.Cypher
apps/: README.md
data/: .gitignore  README.md  gen_clients_data.py  generate.py  generate_products.py  load.py  load_clients.py  load_products.py  pyproject.toml  requirements.txt
docs/: biome.json  diagramas.md  package.json  vite.config.ts
etl/: .env.example  .gitignore  README.md  equivalences.py  main.py  pyproject.toml  utils.py
etl/association_rules/: get_rules.py  get_transactions.py  load_rules.py
etl/configs/: connections.py
etl/extract/: mongo.py  mssql.py  mysql.py  neo4j.py  neo4j_.py  supabase.py
etl/jobs/: __init__.py  bccr_tc_diario.py  bccr_tc_historico.py  scheduler.py
etl/load/: general.py
etl/transform/: mongo.py  mssql.py  mysql.py  neo4j.py  supabase.py
scripts/: dev.ps1  dev.sh  dev_apps.sh  dev_up.ps1  dev_up.sh
services/: .gitignore  README.md
services/api-neo4j/: .env.example  README.md  main.py  pyproject.toml
services/api-neo4j/config/: database.py
services/api-neo4j/controllers/: clients.py  orders.py  products.py
services/api-neo4j/repositories/: clients.py  orders.py  products.py
services/api-neo4j/routes/: clients.py  orders.py  products.py
services/api-neo4j/schemas/: orders.py
services/api-supabase/: .env.example  README.md  main.py  pyproject.toml
services/api-supabase/config/: database.py
services/api-supabase/controllers/: clients.py  orders.py  products.py
services/api-supabase/repositories/: clients.py  orders.py  products.py
services/api-supabase/routes/: clients.py  orders.py  products.py
services/api-supabase/schemas/: orders.py
(+177 files in other folders)
