[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "pymongo>=4.15.4",
    "mlxtend>=0.23.4",
    "neo4j>=6.0.3",
    "supabase>=2.24.0",
    "pycountry>=24.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
