[project]
name = "api-neo4j"
version = "0.1.0"
description = "FastAPI service that exposes the Neo4j graph for the retail data platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "neo4j>=5.23,<6.0",
  "python-dotenv>=1.0,<2.0",
  "pydantic>=2.9,<3.0"
]

[tool.uv]
package = true

[project.scripts]
dev = "main:run_dev"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "config*",
  "controllers*",
  "repositories*",
  "routes*",
  "schemas*"
]
